Updated index.html ID's and fixed spacing on pricing cards in style.css

--- a/Style/style.css
+++ b/Style/style.css
@@ -13,7 +13,7 @@
   
   * {box-sizing: border-box;}
   header {
-    
+    position: fixed;
     overflow: hidden;
     width: 100%;
     background-color: white;
@@ -173,7 +173,7 @@
     }
   
   #pricing h2 {
-    padding-bottom: 20vh;
+    padding-bottom: 10vh;
   }
   
   .box {
